--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-ktorVersion=2.0.1
-kotlinVersion=1.6.21
-slf4jVersion=1.7.36
 kotlin.code.style=official
+systemProp.kotlinVersion=1.7.20
+# Dependecny
+ktorVersion=2.1.3
+dotenvVersion=6.3.1
