--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ systemProp.kotlinVersion=1.7.20
 # Dependecny
 bcryptVersion=2.2.0
 dotenvVersion=6.3.1
-ktorVersion=2.1.3
+ktorVersion=2.2.0-eap-550
