--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
-systemProp.kotlinVersion=1.7.20
+systemProp.kotlinVersion=1.8.10
 # Dependecny
 bcryptVersion=2.2.0
 dotenvVersion=6.3.1
-ktorVersion=2.2.0-eap-550
+ktorVersion=2.3.0
