Refactored manual-release.yml

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -4,44 +4,51 @@ on:
   workflow_dispatch:
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Docker availability
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Verify Docker is available
         run: |
-          docker version
-          docker run hello-world
+          echo "Docker info:"
+          docker info
 
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: 21
+          distribution: temurin
+          java-version: '21'
 
-      - name: Extract version from Gradle
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
+
+      - name: Run tests (with Testcontainers)
+        env:
+          DOCKER_HOST: unix:///var/run/docker.sock
+          TESTCONTAINERS_RYUK_DISABLED: "true"
+          TESTCONTAINERS_STARTUP_TIMEOUT: "120000"
+        run: |
+          ./gradlew clean build --info
+
+      - name: Extract version
         id: get_version
         run: |
-          VERSION=$(grep -oP 'version\s*=\s*"\K[^"]+' build.gradle.kts)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version=$(grep -oP 'version\\s*=\\s*\"\\K[^\"]+' build.gradle.kts)" >> $GITHUB_OUTPUT
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v3
-
-      - name: Build fatJar
-        run: ./gradlew clean build
-
-      - name: Upload to GitHub Release
+      - name: Publish JAR as Release
+        if: success() && github.event_name == 'push'
         uses: softprops/action-gh-release@v2
         with:
-          name: Release ${{ steps.get_version.outputs.version }}
           tag_name: ${{ steps.get_version.outputs.version }}
-          body: |
-            Automatic release for version `${{ steps.get_version.outputs.version }}`
-          files: |
-            build/libs/*.jar
+          name: Release ${{ steps.get_version.outputs.version }}
+          files: build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
