--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -30,6 +30,9 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
 
+      - name: Create JWT_SECRET
+        run: echo "JWT_SECRET=$(head /dev/urandom | tr -dc A-Za-z0-9 | head -c32)" >> $GITHUB_ENV
+
       - name: Run tests (with Testcontainers)
         env:
           DOCKER_HOST: unix:///var/run/docker.sock
