--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -50,6 +50,6 @@ jobs:
           body: |
             Automatic release for version `${{ steps.get_version.outputs.version }}`
           files: |
-            build/libs/*.jar
+            build/libs/*${{ steps.get_version.outputs.version }}*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
