--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,7 +1,10 @@
 name: Manual Package Release
 
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: [ "Release" ]
+    types:
+      - completed
 
 permissions:
   contents: read
@@ -9,6 +12,7 @@ permissions:
 
 jobs:
   package-release:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     env:
